Delete Modal Added

--- a/templates/base.html
+++ b/templates/base.html
@@ -327,6 +327,9 @@
     {% block content %}
     {% endblock content %}
   </div>
+  <!-- MODAL -->
+
+
 
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
