--- a/bugtrackerapp/templates/bugtrackerapp/ticket_detail.html
+++ b/bugtrackerapp/templates/bugtrackerapp/ticket_detail.html
@@ -4,6 +4,26 @@
 
 {% block content %}
 
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteModalLabel">{{ticket.id}} - {{ticket.title|truncatechars:28}}</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete <strong>{{ticket.title|truncatechars:28}}</strong>?
+      </div>
+      <div class="modal-footer">
+        <a href="{% url 'bugtracker:ticket_delete' ticket.id %}" type="button" class="btn btn-danger">Delete</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+       
+      </div>
+    </div>
+  </div>
+</div>
+
 <h1>Ticket Detail</h1>
 <hr>
 <div class="d-flex flex-row flex-wrap justify-content-between">
