--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,8 +4,8 @@
 
 <div class="d-flex" id="wrapper">
         <div class="bg-white main-navbar" id="sidebar-wrapper">
-                <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
-                                class="fas fa-user-secret me-2"></i>Bug Tracker V1</div>
+                <!-- <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><i
+                                class="fas fa-user-secret me-2"></i>Bug Tracker V1</div> -->
 
                 <div class="list-group list-group-flush my-3">
                         {% if user.is_authenticated %}
