--- a/templates/base.html
+++ b/templates/base.html
@@ -72,14 +72,170 @@
 
     }
 
+    .comment-info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .comment-profile-img {
+      width: 30px;
+      height: 30px;
+      margin-right: 1rem;
+    }
+
+    .comment-profile-img .comment-profile-initials {
+      /* background: tomato; */
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .comment-profile-img .comment-profile-initials>div {
+      font-size: .70rem;
+      color: #fff;
+    }
+
+    .notif-profile-img {
+      width: 30px;
+      height: 30px;
+      margin-right: 1rem;
+    }
+
+    .notif-profile-img .notif-profile-initials {
+      /* background: tomato; */
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .notif-profile-img .notif-profile-initials>div {
+      font-size: .70rem;
+      color: #fff;
+    }
+
+    .comment-profile-img img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+    .card-body-inner {
+      margin-bottom: 2rem;
+    }
+
     .ticket-label {
       font-weight: 600;
     }
 
+    .sidebar-heading {
+      border: none !important;
+    }
 
     .navbar-top {
       z-index: -9999 !important;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.5rem 1rem;
+      height: 5rem;
+    }
 
+
+    .dropdown {
+      /* width: 50px !important; */
+      border: none;
+      margin-right: 1rem;
+    }
+
+    .dropdown>a {
+      background: #fff;
+      color: #000;
+      width: 100%;
+      border: none;
+    }
+
+    .dropdown-menu {
+      overflow-y: scroll;
+    }
+
+    .dropdown-menu.notifs.show {
+      width: 400px !important;
+      overflow-x: hidden;
+      overflow-y: scroll;
+    }
+
+    .dropdown-item {
+      padding-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .dropdown-item:hover {
+      background: #012970;
+      color: #fff;
+
+    }
+
+    .notif-title {
+      margin-left: 1rem;
+      margin-bottom: 1rem;
+
+    }
+
+    .notif-info {
+      display: flex;
+
+    }
+
+    .notif-avatar {
+      width: 30px;
+      height: 30px;
+      margin-right: 1rem;
+    }
+
+    .notif-avatar img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+    .notif-text {
+      max-width: 80px;
+    }
+
+    .notif-text>p {
+      font-size: .80rem;
+    }
+
+    .notif-date {
+      font-size: .65rem;
+      margin-left: 3rem;
+    }
+
+    .navbar-menus {
+      display: flex;
+      align-items: center;
+
+    }
+
+    .dropdown-account-toggle {
+      width: 100% !important;
+    }
+
+    .dropdown-account-profile-pic {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
     }
 
     .try-text {
@@ -189,13 +345,13 @@
 
     .ticket-image {
       width: 700px;
-
+      height: 500px;
     }
 
     .ticket-image img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     /* DataTable */
@@ -261,6 +417,7 @@
     .navbar-top {
       display: flex;
       justify-content: space-between;
+      padding: 0.50rem 1rem;
     }
 
     /* DATATABLES */
@@ -629,6 +786,28 @@
     $("#search").keyup(function () {
       newSearch.search($(this).val()).draw();
     })
+
+    document.addEventListener('DOMContentLoaded', function () {
+      // Function to generate a random hex color
+      function getRandomColor() {
+        const letters = '0123456789ABCDEF';
+        let color = '#';
+        for (let i = 0; i < 6; i++) {
+          color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+      }
+
+      // Change the background color when the button is clicked
+      window.addEventListener('load', function () {
+        const newColor = getRandomColor();
+        document.getElementById('changeColor').style.backgroundColor = newColor;
+        // document.getElementById('changeColor2').style.backgroundColor = newColor;
+      });
+    });
+
+
+
   </script>
 
 </body>
